--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ img {
     min-height: 300px;
     /*max-height: 650px;*/
     position: relative;
-    background-image: url(../img/bg/header-bg.jpeg);
+    background-image: url(../img/header-bg.jpeg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -477,7 +477,7 @@ img {
 *                               04. Process area css
 * ---------------------------------------------------------------------------------------*/
 .process-area {
-    background-image: url(../img/bg/work-bg.jpg);  
+    background-image: url(../img/work-bg.jpg);  
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
