--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,6 +561,24 @@ img {
 /* ----------------------------------------------------------------------------------------
 *                               06. Portfolio/work area css
 * --------------------------------------------------------------------------------------- */
+.work-area.img-bg {
+
+    background-image: url(../img/work-bg.jpg);  
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    position: relative;
+}
+
+.work-area:before {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    content: "";
+    position: absolute;
+    background: rgba(255, 255, 255, 0.9);
+}
 
 .row.fix{
     display:flex;
