--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ img {
     min-height: 300px;
     /*max-height: 650px;*/
     position: relative;
-    background-image: url(../img/header-waves.jpg);
+    background-image: url(../img/header-bg.jpeg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -559,9 +559,9 @@ img {
 /* ----------------------------------------------------------------------------------------
 *                                07. Testimonial area css
 * --------------------------------------------------------------------------------------- */
-.testimonial-area.img-bg {
 
-    background-image: url(https://images.pexels.com/photos/159731/pencil-education-pencil-sharpener-art-159731.jpeg?w=1920&h=1080&auto=compress&cs=tinysrgb);  
+.testimonial-area.img-bg {
+    background-image: url(../img/drone.jpeg);  
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
