fix comments on css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,15 +20,13 @@
 
 04. About area css
 
-05. Service area css
+05. Work area css
 
-06. Portfolio/work area css
+06. Testimonial area css
 
-07. Testimonial area css
+07. Contact area css
 
-08. Contact area css
-
-09. Footer area css
+08. Footer area css
 
 -------------------------------------------------------------------------------------- */
 
@@ -445,7 +443,7 @@ img {
 
 
 /* ----------------------------------------------------------------------------------------
-*                               06. Portfolio/work area css
+*                               05. Portfolio/work area css
 * --------------------------------------------------------------------------------------- */
 
 .row.fix{
@@ -557,7 +555,7 @@ img {
 
 
 /* ----------------------------------------------------------------------------------------
-*                                07. Testimonial area css
+*                                06. Testimonial area css
 * --------------------------------------------------------------------------------------- */
 
 .testimonial-area.img-bg {
@@ -646,7 +644,7 @@ img {
 
 
 /* ----------------------------------------------------------------------------------------
-*                                   08. Contact area css
+*                                   07. Contact area css
 * --------------------------------------------------------------------------------------- */
 .contact-row {
     max-width: 1000px;
@@ -706,7 +704,7 @@ img {
 
 
 /* ----------------------------------------------------------------------------------------
-*                                   09. Footer area css
+*                                   08. Footer area css
 * --------------------------------------------------------------------------------------- */
 .footer-area {
     background: #85af4b;
